# mimic

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  generate-icons.mjs  index.html  package-lock.json  package.json  preview.html  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: App.css  App.tsx  GhostIcon.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  preview.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: HistoryPanel.tsx  PreviewPane.tsx  RefinementDialog.tsx
