[package]
name = "mimic-desktop"
version = "0.1.0"
description = "The invisible developer in your menu bar"
authors = ["Mimic Contributors"]
edition = "2021"

[lib]
name = "mimic_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
